# grpc_aiohttp

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: client.py  config.py  initial.py  main.py
app/api/: schemas.py
app/api/dependecies/: repositories.py
app/api/routes/: auth.py  ping.py
app/domain/entities/: user.py
app/grpc_app/: auth.proto  auth_pb2.py  auth_pb2_grpc.py  grpc_server.py
app/repositories/user/: base.py  user_fake_repository.py  user_mongodb.py
app/services/: user_service.py
app/tests/: initial.py  test_auth.py
